--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     
 }
 
+.mai {
+  text-align: center;
+}
+
 .last {
   color: white;
   font-weight: 700;
@@ -32,7 +36,7 @@
 }
 
 .steps {
-  text-align: left;
+  text-align: justify;
   color: white;
   font-size: 28px;
 }
